<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context=".texttomorse">

    <!-- TODO: Update blank fragment layout -->

    <EditText
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:inputType="textPersonName"
            android:text="@string/input_text"
            android:ems="10"
            android:id="@+id/editText" android:singleLine="false"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <Switch
            android:text="@string/switch_twofive"
            android:layout_width="80dp"
            android:layout_height="27dp"
            android:id="@+id/UnitSpeed1" tools:text="0.25"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="152dp" android:layout_marginEnd="152dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/UnitSpeed2"/>
    <TextView
            android:text="@string/unit_speed_ms"
            android:layout_width="187dp"
            android:layout_height="35dp"
            android:id="@+id/textView" android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="105dp" android:layout_marginEnd="104dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/editText"/>
    <Switch
            android:text="@string/Switch_FiveZero"
            android:layout_width="80dp"
            android:layout_height="27dp"
            android:id="@+id/UnitSpeed2"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="152dp" android:layout_marginEnd="152dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/UnitSpeed1"
            app:layout_constraintBottom_toTopOf="@+id/UnitSpeed3"/>
    <Switch
            android:text="@string/Switch_SevenFive"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:id="@+id/UnitSpeed3"
            app:layout_constraintTop_toBottomOf="@+id/UnitSpeed2" android:layout_marginEnd="152dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="152dp"/>
    <ImageButton
            android:src="@drawable/button_play_sequence"
            android:layout_width="181dp"
            android:layout_height="52dp" android:id="@+id/playSequence"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="106dp"
            android:layout_marginEnd="101dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/UnitSpeed3"/>
    <TextView
            android:layout_width="350dp"
            android:layout_height="69dp"
            android:id="@+id/MorseOutput"
            app:layout_constraintTop_toBottomOf="@+id/playSequence" android:layout_marginTop="8dp"
            android:layout_marginEnd="5dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="5dp" android:textSize="20sp"
            android:scrollbars="vertical"
            android:textIsSelectable="true"
        />
    />
    <ImageButton
            android:src="@drawable/button_sos"
            android:layout_width="110dp"
            android:layout_height="56dp"
            android:id="@+id/emergency" android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/MorseOutput" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="137dp" android:layout_marginEnd="137dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <ImageButton
            android:src="@drawable/ic_torch_off"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/fLightOff" android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/emergency" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="94dp"/>
    <ImageButton
            android:src="@drawable/ic_torch_on"
            android:layout_width="60dp"
            android:layout_height="60dp" android:id="@+id/fLightOn"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/emergency" android:layout_marginEnd="94dp"
            app:layout_constraintEnd_toEndOf="parent"/>
</android.support.constraint.ConstraintLayout>